--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,34 @@
 <!doctype html>
-<html>
+<html ng-app>
 <head>
 <title>btc-CampBX Trading Bot</title>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.4/angular.min.js"></script>
+<script type="text/javascript">
+function TickCtrl($scope, $http)
+{
+    $scope.bid = "unknown";
+    $scope.ask = "unknown";
+    $scope.usdLiquid = "unknown";
+    $scope.usdTotal = "unknown";
+    $scope.btcLiquid = "unknown";
+    $scope.btcTotal = "unknown";
+    $scope.total = "unknown";
+    $scope.refresh = function() 
+    {
+        $http.get('/tick').then(function(result) 
+        {
+            $scope.bid = parseFloat(result.data["bid"]);
+            $scope.ask = parseFloat(result.data["ask"]);
+            $scope.usdLiquid = parseFloat(result.data["usd-liquid"]);
+            $scope.usdTotal = parseFloat(result.data["usd-total"]);
+            $scope.btcLiquid = parseFloat(result.data["btc-liquid"]);
+            $scope.btcTotal = parseFloat(result.data["btc-total"]);
+            $scope.total = ($scope.bid * $scope.btcTotal) + $scope.usdTotal;
+        });
+    };
+    
+}
+</script>
 <style>
 body {
     font-family: verdana;
@@ -13,18 +40,41 @@ td, th {
 </style>
 </head>
 <body>
-<p>Current bid: {{bid}} ask: {{ask}}</p>
-<h1>Order Book</h1>
-<table border="0" cellpadding="5" cellspacing="0">
-<tr><th></th><th>Price</th><th>Quantity</th><th>Status</th></tr>
-{% for order in order_book %}
+
+<input type="button" value="Run" onClick="window.location='/algo'"/>
+
+<table border>
     <tr>
-    <td>{{ order.side }}</td>
-    <td>{{ order.price }}</td>
-    <td>{{ order.quantity }}</td>
-    <td>{{ order.status }}</td>
+        <td valign="top">
+            <h1>Exchange Information</h1>
+            <div ng-controller="TickCtrl">
+                <button ng-click="refresh();">Refresh!</button>
+                <p>Current bid: {{'{{bid}}'}} ask: {{'{{ask}}'}}</p>
+                <table>
+                <tr><th></th><th>Liquid</th><th>Total</th></tr>
+                <tr><th>USD</th><td>{{'{{usdLiquid}}'}}</td><td>{{'{{usdTotal}}'}}</td></tr>
+                <tr><th>BTC</th><td>{{'{{btcLiquid}}'}}</td><td>{{'{{btcTotal}}'}}</td></tr>
+                </table>
+                <p>Total Value: {{'{{total}}'}}</p>
+            </div>
+
+            <h1>Settings</h1>
+        </td>
+        <td valign="top">
+            <h1>Order Book</h1>
+            <table border="0" cellpadding="5" cellspacing="0">
+            <tr><th></th><th>Price</th><th>Quantity</th><th>Status</th></tr>
+            {% for order in order_book %}
+                <tr>
+                <td>{{ order.side }}</td>
+                <td>{{ order.price }}</td>
+                <td>{{ order.quantity }}</td>
+                <td>{{ order.status }}</td>
+                </tr>
+            {% endfor %}
+            </table>
+        </td>
     </tr>
-{% endfor %}
 </table>
 </body>
 </html>
